--- a/compare.html
+++ b/compare.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -67,7 +69,7 @@
         }
 
         const coordQuery = `${geo.lat},${geo.lon}`;
-        const response = await fetch(`http://api.weatherstack.com/current?access_key=${API_KEY}&query=${coordQuery}&aqi=1`);
+        const response = await fetch(`https://api.weatherstack.com/current?access_key=${API_KEY}&query=${coordQuery}&aqi=1`);
         return await response.json();
     }
 
