--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <ul>
-          <li><a href="home-page.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="details.html">Weather Details</a></li>
           <li><a href="compare.html">Compare Cities</a></li>
         </ul>
